--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="vi">
+    <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Truy Tìm Kho Báu - Treasure Hunt</title>
+    <title>Treasure Hunt</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -15,13 +15,13 @@
         <div class="flex items-center gap-2">
             <div id="currentPlayerAvatar" class="w-8 h-8 rounded-full border-2 border-white shadow-sm flex items-center justify-center text-xs font-bold bg-red-500">P1</div>
             <div>
-                <h1 class="text-sm font-bold text-yellow-400 uppercase tracking-wider">Kho Báu</h1>
-                <p class="text-xs text-gray-300">Lượt: <span id="turnIndicator" class="font-bold text-white">Player 1</span></p>
+                <h1 class="text-sm font-bold text-yellow-400 uppercase tracking-wider">Treasure</h1>
+                <p class="text-xs text-gray-300">Turn: <span id="turnIndicator" class="font-bold text-white">Player 1</span></p>
             </div>
         </div>
         <div class="flex items-center gap-4">
             <div class="text-center">
-                <span class="block text-xs text-gray-400">Tiền</span>
+                <span class="block text-xs text-gray-400">Coins</span>
                 <span id="coinDisplay" class="text-yellow-400 font-bold"><i class="fas fa-coins"></i> 0</span>
             </div>
             <button id="inventoryBtn" class="bg-slate-700 hover:bg-slate-600 p-2 rounded-lg relative">
@@ -38,12 +38,12 @@
         <!-- Floating Info: Dice & Moves -->
         <div class="absolute top-4 left-1/2 transform -translate-x-1/2 bg-black/70 backdrop-blur-md px-4 py-2 rounded-full flex items-center gap-4 shadow-xl border border-white/10">
             <div class="flex flex-col items-center">
-                <span class="text-[10px] text-gray-300 uppercase">Xúc sắc</span>
+                <span class="text-[10px] text-gray-300 uppercase">Dice</span>
                 <span id="diceValue" class="text-xl font-bold text-cyan-400">-</span>
             </div>
             <div class="h-8 w-px bg-gray-500"></div>
             <div class="flex flex-col items-center">
-                <span class="text-[10px] text-gray-300 uppercase">Bước đi</span>
+                <span class="text-[10px] text-gray-300 uppercase">Moves</span>
                 <span id="movesLeft" class="text-xl font-bold text-green-400">0</span>
             </div>
         </div>
@@ -51,7 +51,7 @@
         <!-- Action Overlay -->
         <div id="actionOverlay" class="absolute inset-0 bg-black/40 hidden flex items-center justify-center z-20 pointer-events-none">
             <div class="bg-white text-slate-900 p-4 rounded-lg shadow-2xl animate-bounce">
-                <p id="actionMessage" class="font-bold">Đến lượt bạn!</p>
+                <p id="actionMessage" class="font-bold">Your turn!</p>
             </div>
         </div>
     </div>
@@ -76,14 +76,14 @@
             <!-- Action Buttons -->
             <div class="flex flex-col gap-2 flex-1">
                 <button id="rollBtn" class="bg-yellow-500 hover:bg-yellow-400 text-slate-900 font-bold py-3 px-4 rounded-lg shadow-lg border-b-4 border-yellow-700 active:border-b-0 active:translate-y-1 transition-all w-full flex justify-center items-center gap-2">
-                    <i class="fas fa-dice"></i> TUNG XÚC SẮC
+                    <i class="fas fa-dice"></i> ROLL DICE
                 </button>
                 <div class="flex gap-2">
-                    <button id="digBtn" disabled class="flex-1 bg-gray-600 text-gray-400 font-bold py-2 rounded-lg shadow border-b-4 border-gray-800 transition-all flex justify-center items-center gap-1 disabled:opacity-50">
-                        <i class="fas fa-shovel"></i> ĐÀO
+                    <button id="digBtn" disabled class="flex-1 bg-amber-700 hover:bg-amber-600 text-white font-bold py-2 rounded-lg shadow border-b-4 border-amber-900 transition-all flex justify-center items-center gap-1 disabled:opacity-50">
+                        <i class="fas fa-hammer"></i> DIG
                     </button>
-                    <button id="skipBtn" disabled class="flex-1 bg-red-500 hover:bg-red-400 text-white font-bold py-2 rounded-lg shadow border-b-4 border-red-700 active:border-b-0 active:translate-y-1 transition-all disabled:opacity-50 disabled:bg-gray-600">
-                        QUA LƯỢT
+                    <button id="skipBtn" disabled class="flex-1 bg-red-500 hover:bg-red-400 text-white font-bold py-2 rounded-lg shadow border-b-4 border-red-700 active:border-b-0 active:translate-y-1 transition-all flex justify-center items-center gap-1 disabled:opacity-50 disabled:bg-gray-600">
+                        <i class="fas fa-forward"></i> NEXT TURN
                     </button>
                 </div>
             </div>
@@ -96,14 +96,14 @@
     <div id="modal" class="fixed inset-0 bg-black/80 hidden z-50 flex items-center justify-center p-4">
         <div class="bg-white text-slate-900 rounded-xl shadow-2xl max-w-sm w-full overflow-hidden transform transition-all scale-100">
             <div class="bg-slate-100 p-4 border-b flex justify-between items-center">
-                <h3 id="modalTitle" class="font-bold text-lg">Thông báo</h3>
+                <h3 id="modalTitle" class="font-bold text-lg">Notification</h3>
                 <button onclick="closeModal()" class="text-gray-500 hover:text-red-500"><i class="fas fa-times"></i></button>
             </div>
             <div id="modalContent" class="p-6 text-center">
                 <!-- Content injected here -->
             </div>
             <div class="p-4 bg-slate-50 flex justify-center">
-                <button onclick="closeModal()" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-500 font-bold">Đóng</button>
+                <button onclick="closeModal()" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-500 font-bold">Close</button>
             </div>
         </div>
     </div>
@@ -111,7 +111,7 @@
     <!-- Inventory Modal -->
     <div id="inventoryModal" class="fixed inset-0 bg-black/90 hidden z-50 flex flex-col p-4">
         <div class="flex justify-between items-center mb-4 text-white">
-            <h2 class="text-2xl font-bold"><i class="fas fa-suitcase"></i> Túi đồ & Manh mối</h2>
+            <h2 class="text-2xl font-bold"><i class="fas fa-suitcase"></i> Inventory & Clues</h2>
             <button id="closeInventoryBtn" class="bg-red-500 w-10 h-10 rounded-full text-white font-bold"><i class="fas fa-times"></i></button>
         </div>
         <div id="inventoryList" class="flex-1 overflow-y-auto grid grid-cols-1 gap-6 p-4">
@@ -122,8 +122,8 @@
     <!-- Duel Modal -->
     <div id="duelModal" class="fixed inset-0 bg-red-900/90 hidden z-50 flex items-center justify-center p-4">
         <div class="bg-slate-900 border-4 border-red-500 text-white rounded-xl shadow-2xl max-w-sm w-full p-6 text-center">
-            <h2 class="text-3xl font-bold text-red-500 mb-2">⚔ THÁCH ĐẤU ⚔</h2>
-            <p class="text-gray-300 mb-6">Ai tung xúc sắc cao hơn sẽ thắng!</p>
+            <h2 class="text-3xl font-bold text-red-500 mb-2">⚔ DUEL ⚔</h2>
+            <p class="text-gray-300 mb-6">Higher dice roll wins!</p>
             
             <div class="flex justify-around items-center mb-8">
                 <div class="text-center">
@@ -138,7 +138,7 @@
             </div>
 
             <button id="duelRollBtn" class="bg-red-600 hover:bg-red-500 w-full py-3 rounded-lg font-bold text-xl uppercase shadow-lg animate-pulse">
-                Chiến đấu!
+                Fight!
             </button>
         </div>
     </div>
