update duel logic

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <!-- Game Area (Canvas) -->
-    <div class="flex-1 relative overflow-hidden bg-gray-900" id="gameContainer">
+    <div class="flex-1 relative overflow-hidden bg-gray-900 flex items-center justify-center" id="gameContainer">
         <canvas id="gameCanvas" class="absolute top-0 left-0"></canvas>
         
         <!-- Floating Info: Dice & Moves -->
