updated to server client model

--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
         </div>
     </div>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="client/main.js"></script>
 </body>
 </html>
