--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div>
                 <h1 class="text-sm font-bold text-yellow-400 uppercase tracking-wider">Treasure</h1>
                 <p class="text-xs text-gray-300">Turn: <span id="turnIndicator" class="font-bold text-white">Player 1</span></p>
+                <p class="text-xs text-gray-400">Room: <span id="lobbyCodeHeader" class="font-mono font-bold text-blue-400">------</span></p>
             </div>
         </div>
         <div class="flex items-center gap-4">
