update logic duel

--- a/index.html
+++ b/index.html
@@ -138,8 +138,16 @@
                 </div>
             </div>
 
-            <button id="duelRollBtn" class="bg-red-600 hover:bg-red-500 w-full py-3 rounded-lg font-bold text-xl uppercase shadow-lg animate-pulse">
+            <button id="duelRollBtn" class="bg-red-600 hover:bg-red-500 w-full py-3 rounded-lg font-bold text-xl uppercase shadow-lg animate-pulse mb-3">
                 Fight!
+            </button>
+            
+            <div id="duelResultMessage" class="hidden mb-3">
+                <p class="text-lg font-bold" id="duelWinnerText"></p>
+            </div>
+            
+            <button id="duelOkBtn" class="hidden bg-green-600 hover:bg-green-500 w-full py-3 rounded-lg font-bold text-xl uppercase shadow-lg">
+                OK
             </button>
         </div>
     </div>
