reconnect feature update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Treasure Hunt</title>
+    <title>TREASURE HUNTER</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -15,7 +15,8 @@
         <div class="flex items-center gap-2">
             <div id="currentPlayerAvatar" class="w-8 h-8 rounded-full border-2 border-white shadow-sm flex items-center justify-center text-xs font-bold bg-red-500">P1</div>
             <div>
-                <h1 class="text-sm font-bold text-yellow-400 uppercase tracking-wider">Treasure</h1>
+                <h1 class="text-sm font-bold text-yellow-400 uppercase tracking-wider">TREASURE HUNTER</h1>
+                <p id="playerGreeting" class="text-xs text-gray-300">Hello, <span class="font-bold text-white">Player</span></p>
                 <p class="text-xs text-gray-300">Turn: <span id="turnIndicator" class="font-bold text-white">Player 1</span></p>
                 <p class="text-xs text-gray-400">Room: <span id="lobbyCodeHeader" class="font-mono font-bold text-blue-400">------</span></p>
             </div>
